aligned the text in the select drop downs to center, gave label titles some padding andin css changed .currency-input targeter to #base-input and #target-input so the styling applies correctly.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -132,8 +132,13 @@ option {
   text-overflow: ellipsis;
 } */
 
-.currency-input {
-  width: 100%;
+.label-title {
+  padding: 10px;
+}
+
+#base-input, #target-input {
+  width: 20%;
+  text-align: center;
   box-sizing: border-box;
   margin-bottom: 10px;
   padding: 5px;
